# CArgParse

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  pyproject.toml
examples/: CMakeLists.txt  simple.c
include/: ArgParse.h
src/: ArgParse.c  ArgParseTools.c  ArgParseTools.h
tests/: CMakeLists.txt  initArgParse.h  test_global_arg.c  test_mult_arg.c  test_required.c  test_single_arg.c  test_subcommand.c  test_unknow_command.c  test_val.c
